# fastapi-onion-template

./: .env.example  .flake8  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/: config.py  database.py  main.py
backend/auth/: hash.py  security.py
backend/config/: __init__.py  config.example.yaml  config.py
backend/database/: __init__.py  database.py
backend/migrations/: env.py
backend/migrations/versions/: 2025_02_02_1519-75cc6b11c12b_initial_revision.py  2025_02_12_1526-af51128515b2_initial_revision.py  2025_02_16_1139-658c95006115_initial_revision.py
backend/models/: __init__.py  base.py  users.py
backend/repositories/: __init__.py  base.py  uow.py  users.py
backend/routers/v1/: __init__.py  auth.py  users.py
backend/schemas/: __init__.py  tokens.py  users.py
backend/schemas/v1/: users.py
backend/services/: __init__.py  auth.py  users.py
backend/utils/: constants.py  dependencies.py  enums.py  exceptions.py  uow.py
