[tool.black]
line-length = 79

[tool.poetry]
name = "fastapi-onion-template"
version = "0.1.0"
description = "The FastAPI onion architecture template includes repositories, services and unit of work pattern."
authors = ["Maksim <mksmvnv@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.8"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
pydantic = {extras = ["email"], version = "^2.10.6"}
aiosqlite = "^0.20.0"
pydantic-settings = "^2.7.1"
alembic = "^1.14.1"
black = "^25.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.1"
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
