[tool.mypy]
plugins = "pydantic.mypy"

[tool.black]
line-length = 79

[tool.poetry]
name = "fastapi-onion-template"
version = "0.1.0"
description = "The FastAPI onion architecture template includes repositories, services and unit of work pattern."
authors = ["Maksim <mksmvnv@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.34.0"
fastapi = {extras = ["standard"], version = "^0.115.8"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
pydantic = {extras = ["email"], version = "^2.10.6"}
pydantic-settings = "^2.7.1"
aiosqlite = "^0.20.0"
alembic = "^1.14.1"
bcrypt = "^4.2.1"
pyyaml = "^6.0.2"
pyjwt = "^2.10.1"
cryptography = "^44.0.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.1"
mypy = "^1.15.0"
types-pyyaml = "^6.0.12.20241230"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
